[gd_scene load_steps=7 format=3 uid="uid://bld8jks2mhktu"]

[ext_resource type="Script" uid="uid://ck7i0ecpy7yxx" path="res://scripts/ui_manager.gd" id="1_5ysmq"]
[ext_resource type="Script" uid="uid://bfq78wriabsgl" path="res://scripts/attribute_panel.gd" id="2_6fi6k"]
[ext_resource type="Script" uid="uid://cmf086k6dps8e" path="res://scripts/talentstree.gd" id="3_v118s"]

[sub_resource type="LabelSettings" id="LabelSettings_047uy"]
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pdws"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hd3ao"]
bg_color = Color(0.8, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0i1j5"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_5ysmq")

[node name="PlayerAvatar" type="ColorRect" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 80.0
color = Color(0.2, 0.6, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="AvatarBorder" type="ColorRect" parent="."]
z_index = -1
offset_left = 18.0
offset_top = 18.0
offset_right = 82.0
offset_bottom = 82.0
color = Color(0.9, 0.9, 0.9, 1)
metadata/_edit_use_anchors_ = true

[node name="PlayerName" type="Label" parent="."]
offset_left = 90.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 16
text = "玩家名称"
metadata/_edit_use_anchors_ = true

[node name="PlayerLevel" type="Label" parent="."]
offset_left = 90.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(1, 0.9, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 16
text = "等级: 1/30"
metadata/_edit_use_anchors_ = true

[node name="CoinIcon" type="ColorRect" parent="."]
offset_left = 20.0
offset_top = 100.0
offset_right = 56.0
offset_bottom = 136.0
color = Color(1, 0.84, 0, 1)
metadata/is_coin = true
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 65.0
offset_top = 100.0
offset_right = 165.0
offset_bottom = 140.0
text = "金币: 0"
label_settings = SubResource("LabelSettings_047uy")
metadata/_edit_use_anchors_ = true

[node name="DiamondIcon" type="ColorRect" parent="."]
offset_left = 20.0
offset_top = 150.0
offset_right = 56.0
offset_bottom = 186.0
color = Color(0.3, 0.7, 0.9, 1)
metadata/_edit_use_anchors_ = true

[node name="DiamondLabel" type="Label" parent="."]
offset_left = 65.0
offset_top = 150.0
offset_right = 165.0
offset_bottom = 190.0
text = "钻石: 0"
label_settings = SubResource("LabelSettings_047uy")
metadata/_edit_use_anchors_ = true

[node name="InGameLevelInfo" type="Node2D" parent="."]
position = Vector2(360, 50)

[node name="InGameLevel" type="Label" parent="InGameLevelInfo"]
modulate = Color(1, 0.8, 0.2, 1)
offset_left = -45.0
offset_right = 55.0
offset_bottom = 40.0
text = "关卡: 1-1"
label_settings = SubResource("LabelSettings_047uy")
metadata/_edit_use_anchors_ = true

[node name="InGameProgressBG" type="ColorRect" parent="InGameLevelInfo"]
offset_left = -150.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 45.0
color = Color(0.2, 0.2, 0.2, 0.8)
metadata/_edit_use_anchors_ = true

[node name="InGameProgress" type="ColorRect" parent="InGameLevelInfo"]
offset_left = -150.0
offset_top = 30.0
offset_right = -150.0
offset_bottom = 45.0
color = Color(0.2, 0.8, 0.2, 1)
metadata/_edit_use_anchors_ = true

[node name="ExpLabel" type="Label" parent="InGameLevelInfo"]
offset_left = -45.0
offset_top = 50.0
offset_right = 55.0
offset_bottom = 70.0
text = "经验: 0/100"
label_settings = SubResource("LabelSettings_047uy")
metadata/_edit_use_anchors_ = true

[node name="ExpBarBG" type="ColorRect" parent="InGameLevelInfo"]
offset_left = -150.0
offset_top = 70.0
offset_right = 150.0
offset_bottom = 85.0
color = Color(0.1, 0.1, 0.1, 0.9)
metadata/_edit_use_anchors_ = true

[node name="ExpBar" type="ColorRect" parent="InGameLevelInfo"]
offset_left = -150.0
offset_top = 70.0
offset_right = -150.0
offset_bottom = 85.0
color = Color(0.2, 0.6, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 200.0
offset_right = 220.0
offset_bottom = 227.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_5pdws")
theme_override_styles/fill = SubResource("StyleBoxFlat_hd3ao")
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 0
offset_right = 59.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
text = "生命值: 100/100"
horizontal_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0i1j5")

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
text = "游戏结束"
label_settings = SubResource("LabelSettings_047uy")
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "最终得分: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "重新开始"

[node name="BottomPanel" type="TabContainer" parent="."]
anchors_preset = -1
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
current_tab = 0

[node name="属性" type="VBoxContainer" parent="BottomPanel"]
layout_mode = 2
script = ExtResource("2_6fi6k")
metadata/_tab_index = 0

[node name="DamageLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "伤害: 5"

[node name="AttackSpeedLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "攻击速度: 1.0/秒"

[node name="HealthLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "生命值: 80/80"

[node name="DefenseLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "防御: 0.0%"

[node name="DodgeChanceLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "闪避率: 5.0%"

[node name="PenetrationLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "防御穿透: 0%"

[node name="CritChanceLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "暴击几率: 10%"

[node name="CritMultiplierLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "暴击倍率: 1.5x"

[node name="FissionChanceLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "裂变几率: 0%"

[node name="DoubleChanceLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "双连发几率: 30%"

[node name="TripleChanceLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "三连发几率: 10%"

[node name="CrushBonusLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "百分比伤害概率"

[node name="BleedChanceLabel" type="Label" parent="BottomPanel/属性"]
layout_mode = 2
text = "流血概率"

[node name="天赋" type="VBoxContainer" parent="BottomPanel"]
visible = false
layout_mode = 2
metadata/_tab_index = 1
script = ExtResource("3_v118s") # 挂载天赋树脚本

[node name="TalentTitle" type="Label" parent="BottomPanel/天赋"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "天赋系统"
horizontal_alignment = 1

[node name="TalentDescription" type="Label" parent="BottomPanel/天赋"]
layout_mode = 2
text = "解锁并升级你的天赋能力"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="BottomPanel/天赋"]
layout_mode = 2
theme_override_constants/separation = 20

[connection signal="pressed" from="GameOverPanel/RestartButton" to="." method="_on_restart_button_pressed"]
